Fix tooltip cutoff in responsive grid

--- a/admin/assets/less/mura-grid.less
+++ b/admin/assets/less/mura-grid.less
@@ -1190,7 +1190,7 @@
 
 		select {
 			margin-bottom: .75em;
-			width: 158px;
+			width: 141px;
 			font-size: @qeFontSize;
 			padding: 2px 2px;
 			height: auto;
